add: New persentage filter

--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -66,28 +66,28 @@
             <div class="filter-options" style="grid-template-columns: 1fr;"> 
                 <div class="percentage-options-list">
                     <label class="percentage-filter-item">
-                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-60-plus" value="60-plus" autocomplete="off">
+                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-60-plus" value="more_than_60" autocomplete="off">
                         <span class="btn btn-outline-secondary percentage-label" for="percentage-60-plus">60% or more ({{ percentage_counts.more_than_60 }})</span>
                     </label>
                     <label class="percentage-filter-item">
-                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-50-60" value="50-60" autocomplete="off">
+                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-50-60" value="between_50_60" autocomplete="off">
                         <span class="btn btn-outline-secondary percentage-label" for="percentage-50-60">50% - 60% ({{ percentage_counts.between_50_60 }})</span>
                     </label>
                     <label class="percentage-filter-item">
-                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-40-50" value="40-50" autocomplete="off">
+                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-40-50" value="between_40_50" autocomplete="off">
                         <span class="btn btn-outline-secondary percentage-label" for="percentage-40-50">40% - 50% ({{ percentage_counts.between_40_50 }})</span>
                     </label>
                     <label class="percentage-filter-item">
-                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-30-40" value="30-40" autocomplete="off">
+                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-30-40" value="between_30_40" autocomplete="off">
                         <span class="btn btn-outline-secondary percentage-label" for="percentage-30-40">30% - 40% ({{ percentage_counts.between_30_40 }})</span>
                     </label>
                     <label class="percentage-filter-item">
-                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-20-30" value="20-30" autocomplete="off">
+                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-20-30" value="between_20_30" autocomplete="off">
                         <span class="btn btn-outline-secondary percentage-label" for="percentage-20-30">20% - 30% ({{ percentage_counts.between_20_30 }})</span>
                     </label>
                     <label class="percentage-filter-item">
-                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-up-to-20" value="up-to-20" autocomplete="off">
-                        <span class="btn btn-outline-secondary percentage-label" for="percentage-up-to-20">Up to 20% ({{ percentage_counts.up_to_20 }})</span>
+                        <input type="radio" class="btn-check percentage-checkbox" name="percentage-filter" id="percentage-up_to_20" value="up_to_20" autocomplete="off">
+                        <span class="btn btn-outline-secondary percentage-label" for="percentage-up_to_20">Up to 20% ({{ percentage_counts.up_to_20 }})</span>
                     </label>
                 </div>
             </div>
