add: upload site logo

--- a/WebpageTest/mysite/intellishop/templates/intellishop/index_home_original.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/index_home_original.html
@@ -121,7 +121,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand text-success" href="#" id="brand-home">
-                <img src="{% static 'images/favicon.jpg' %}" alt="Intellishop Logo" width="35" class="d-inline-block align-text-top me-2">
+                <img src="{% static 'images/Intelli-Shop-Logo.jpg' %}" alt="Intellishop Logo" width="35" class="d-inline-block align-text-top me-2">
                 Intelli Shop
             </a>
             
