--- a/WebpageTest/mysite/intellishop/templates/intellishop/index.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand text-success" href="#" id="brand-home">
-                <img src="{% static 'images/favicon.jpg' %}" alt="FreshCart Logo" width="35" class="d-inline-block align-text-top me-2">
+                <img src="{% static 'images/Intelli-Shop-Logo.jpg' %}" alt="Intellishop Logo" width="35" class="d-inline-block align-text-top me-2">
                 FreshCart
             </a>
             
